monitoria/mac323/5-3-24/grades/mathias-menck_201365_assignsubmission_file_ep23.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CC......
EP: mathias-menck_201365_assignsubmission_file_ep23
NOTA: 100
CORREÇÃO AUTOMÁTICA
1200 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
2 Testes com Erro de Compilação (incui o bônus)

rm: não foi possível remover “judge_out/”: Arquivo ou diretório não encontrado
make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Brute_003 ============
./Brute.java:124: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
    ^
  symbol:   class Queue
  location: class Brute
./Brute.java:124: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
                           ^
  symbol:   class Queue
  location: class Brute
2 errors
Exception in thread "main" java.lang.NoClassDefFoundError: Brute
	at BruteDoVictor.main(BruteDoVictor.java:9)
Caused by: java.lang.ClassNotFoundException: Brute
	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
	... 1 more

real	0m0.139s
user	0m0.116s
sys	0m0.036s
partially correct (200) perfeito
======= Brute_004 ============
./Brute.java:124: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
    ^
  symbol:   class Queue
  location: class Brute
./Brute.java:124: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
                           ^
  symbol:   class Queue
  location: class Brute
2 errors
Exception in thread "main" java.lang.NoClassDefFoundError: Brute
	at BruteDoVictor.main(BruteDoVictor.java:9)
Caused by: java.lang.ClassNotFoundException: Brute
	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
	... 1 more

real	0m0.130s
user	0m0.124s
sys	0m0.032s
partially correct (200) perfeito
======= Brute_005 ============
./Brute.java:124: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
    ^
  symbol:   class Queue
  location: class Brute
./Brute.java:124: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
                           ^
  symbol:   class Queue
  location: class Brute
2 errors
Exception in thread "main" java.lang.NoClassDefFoundError: Brute
	at BruteDoVictor.main(BruteDoVictor.java:9)
Caused by: java.lang.ClassNotFoundException: Brute
	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
	... 1 more

real	0m0.129s
user	0m0.124s
sys	0m0.020s
partially correct (200) perfeito
======= KMP_000 ============
./KMP.java:152: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
    ^
  symbol:   class Queue
  location: class KMP
./KMP.java:152: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
                           ^
  symbol:   class Queue
  location: class KMP
2 errors
Exception in thread "main" java.lang.NoClassDefFoundError: KMP
	at KMPDoVictor.main(KMPDoVictor.java:4)
Caused by: java.lang.ClassNotFoundException: KMP
	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
	... 1 more

real	0m0.108s
user	0m0.080s
sys	0m0.028s
partially correct (200) perfeito
======= KMP_001 ============
./KMP.java:152: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
    ^
  symbol:   class Queue
  location: class KMP
./KMP.java:152: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
                           ^
  symbol:   class Queue
  location: class KMP
2 errors
Exception in thread "main" java.lang.NoClassDefFoundError: KMP
	at KMPDoVictor.main(KMPDoVictor.java:4)
Caused by: java.lang.ClassNotFoundException: KMP
	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
	... 1 more

real	0m0.100s
user	0m0.072s
sys	0m0.028s
partially correct (200) perfeito
======= KMP_002 ============
./KMP.java:152: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
    ^
  symbol:   class Queue
  location: class KMP
./KMP.java:152: error: cannot find symbol
    Queue<Integer> q = new Queue<Integer>();
                           ^
  symbol:   class Queue
  location: class KMP
2 errors
Exception in thread "main" java.lang.NoClassDefFoundError: KMP
	at KMPDoVictor.main(KMPDoVictor.java:4)
Caused by: java.lang.ClassNotFoundException: KMP
	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
	... 1 more

real	0m0.099s
user	0m0.076s
sys	0m0.024s
partially correct (200) perfeito
